# lc-test

./: lc-test.cabal  lc-test.sublime-project  main.lc  stack.yaml
src/: Main.hs
