name:                lc-test
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/lc-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lc-test
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Matrix
  default-language:    Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , bytestring            >= 0.10     && < 0.11
    , containers            >= 0.5      && < 0.6
    , JuicyPixels           >= 3.2      && < 3.3
    , lambdacube-compiler   >= 0.6      && < 0.7
    , lambdacube-gl         >= 0.5      && < 0.6
    , lambdacube-ir         >= 0.3      && < 0.4
    , lens                  >= 4.14     && < 4.15
    , linear                >= 1.20     && < 1.21
    , mtl                   >= 2.2      && < 2.3
    , sdl2                  >= 2.1      && < 2.2
    , text                  >= 1.2.1    && < 1.3
    , vector                >= 0.11     && < 0.12

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

  ghc-options: -threaded
